# portfolio-backend

./: .env  Cargo.toml  build.rs
migrations/2023-04-17-222354_create_projects/: up.sql
migrations/2023-04-17-222435_create_project_statuses/: down.sql  up.sql
proto/: project.proto  project_status.proto
src/: config.rs  errors.rs  jwt.rs  lib.rs  main.rs  schema.rs
src/db/: mod.rs  project_statuses.rs  projects.rs
src/grpc/: project.rs  project_status.rs
src/models/: project.rs  project_status.rs
src/request_guards/: bearer_auth.rs
src/routes/: health.rs  mod.rs  project_events.rs  project_statuses.rs  projects.rs
