[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "=0.1.0-rc.3", features = ["diesel_postgres_pool"] }
diesel = { version = "2.0.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "1.3.1", features = ["v4"] }
serde = "1.0.160"
thiserror = "1.0.40"
